k8s/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  namespace: mandelbrok8s
  labels:
    app: orchestrator
spec:
  type: ClusterIP
  selector:
    app: orchestrator
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
